[gd_scene load_steps=3 format=3 uid="uid://dh7fpqceqlmr8"]

[ext_resource type="Script" path="res://menus/run/dev_ui.gd" id="1_psh78"]

[sub_resource type="LabelSettings" id="LabelSettings_bysnx"]
font_size = 32
outline_size = 3
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(3, 3)

[node name="DevUI" type="CanvasLayer"]
script = ExtResource("1_psh78")

[node name="Main" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2

[node name="has_wonLabel" type="Label" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "has_won: "
label_settings = SubResource("LabelSettings_bysnx")

[node name="win_checked label" type="Label" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "win_checked: "
label_settings = SubResource("LabelSettings_bysnx")

[node name="Are_bodies_moving label" type="Label" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "are_bodies_moving: "
label_settings = SubResource("LabelSettings_bysnx")

[node name="number_of_bodies label" type="Label" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "number_of_bodies:"
label_settings = SubResource("LabelSettings_bysnx")

[node name="Label7" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Uhhh:"
label_settings = SubResource("LabelSettings_bysnx")

[node name="Label8" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Uhhh:"
label_settings = SubResource("LabelSettings_bysnx")
