extends CanvasLayer

@onready var main: MarginContainer = $Main

@onready var has_won_label: Label = %has_wonLabel
@onready var win_checked_label: Label = %"win_checked label"
@onready var are_bodies_moving_label: Label = %"Are_bodies_moving label"
@onready var number_of_bodies_label: Label = %"number_of_bodies label"


func _ready() -> void:
	main.modulate = Color(Color.WHITE, 0.5)


func _process(_delta: float) -> void:
	if visible:
		has_won_label.text = "has_won: " + str(PlayerInput.has_won)
		win_checked_label.text = "win_checked: " + str(PlayerInput.win_checked)
		are_bodies_moving_label.text = "are_bodies_moving: " + str(PlayerInput.are_bodies_moving)
		number_of_bodies_label.text = "number_of_bodies: " + str(PlayerInput.number_of_bodies)
	
	else:
		self.set_process(false)
